--- a/src/styles/CountryList.scss
+++ b/src/styles/CountryList.scss
@@ -21,12 +21,14 @@
 }
 
 .country-flag {
-  width: 200px;
+  width: 100%;
+  max-width: 200px;
   height: 150px;
-  object-fit: cover;
-  margin: 0 auto;
+  object-fit: contain;
+  background-color: #ebf8ff;
   display: block;
-  border-radius: 4px;
+  margin: 0 auto;
+  padding: 0.5rem;
 }
 
 .country-name {
